tests/snapshots/examples_fixtures/type_system__65_real_program_primop_pipeline.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/65_real_program_primop_pipeline.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
