tests/snapshots/examples_fixtures/type_system__66_real_program_base_module_integration.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/66_real_program_base_module_integration.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
