tests/snapshots/examples_fixtures/type_system__68_real_program_effects_module_test.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/68_real_program_effects_module_test.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
