tests/snapshots/examples_fixtures/type_system__72_list_boundary_runtime_check_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/72_list_boundary_runtime_check_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
