tests/snapshots/examples_fixtures/type_system__76_adt_nested_exhaustive_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/76_adt_nested_exhaustive_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
