tests/snapshots/examples_fixtures/type_system__77_adt_multi_arity_nested_exhaustive_ok.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/77_adt_multi_arity_nested_exhaustive_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
