tests/snapshots/examples_fixtures/type_system__92_effect_op_signature_enforcement_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/92_effect_op_signature_enforcement_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
