tests/snapshots/examples_fixtures/type_system__96_hm_stage2_generic_module_call_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/96_hm_stage2_generic_module_call_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
